@@ -21,7 +21,9 @@ using namespace fostlib;
 
 
 fostlib::http::server::server( const host &h, uint16_t p )
-: binding( h ), port( p ), m_server( m_service, boost::asio::ip::tcp::endpoint( binding().address(), port() ) ) {
+: binding( h ), port( p ), m_server(
+    m_service, boost::asio::ip::tcp::endpoint( binding().address(), port() )
+) {
 }
 
 std::auto_ptr< http::server::request > fostlib::http::server::operator () () {
@@ -29,7 +31,9 @@ std::auto_ptr< http::server::request > fostlib::http::server::operator () () {
         new boost::asio::ip::tcp::socket( m_service )
     );
     m_server.accept( *sock );
-    return std::auto_ptr< http::server::request >( new http::server::request( sock ) );
+    return std::auto_ptr< http::server::request >(
+        new http::server::request( sock )
+    );
 }
 
 namespace {
@@ -38,7 +42,16 @@ namespace {
         boost::asio::ip::tcp::socket *sockp
     ) {
         std::auto_ptr< boost::asio::ip::tcp::socket > sock(sockp);
-        http::server::request req(sock);
+        http::server::request req;
+        try {
+            req(sock);
+        } catch ( fostlib::exceptions::exception &e ) {
+            text_body error(
+                fostlib::coerce<fostlib::string>(e)
+            );
+            req( error, 400 );
+            return false;
+        }
         try {
             return service_lambda(req);
         } catch ( fostlib::exceptions::exception &e ) {
@@ -50,13 +63,17 @@ namespace {
         }
     }
 }
-void fostlib::http::server::operator () ( boost::function< bool ( http::server::request & ) > service_lambda ) {
+void fostlib::http::server::operator () (
+    boost::function< bool ( http::server::request & ) > service_lambda
+) {
     // Create a worker pool to service the requests
     workerpool pool;
     while ( true ) {
         // Use a raw pointer here for minimum overhead -- if it all goes wrong
         // and a socket leaks, we don't care (for now)
-        boost::asio::ip::tcp::socket *sock( new boost::asio::ip::tcp::socket( m_service ) );
+        boost::asio::ip::tcp::socket *sock(
+            new boost::asio::ip::tcp::socket( m_service )
+        );
         m_server.accept( *sock );
         pool.f<bool>( boost::lambda::bind(service, service_lambda, sock) );
     }
@@ -68,9 +85,25 @@ void fostlib::http::server::operator () ( boost::function< bool ( http::server::
 */
 
 
+fostlib::http::server::request::request() {
+}
 fostlib::http::server::request::request(
+    std::auto_ptr< boost::asio::ip::tcp::socket > connection
+) {
+    (*this)(connection);
+}
+fostlib::http::server::request::request(
+    const string &method, const url::filepath_string &filespec,
+    std::auto_ptr< binary_body > headers_and_body
+) : m_method( method ), m_pathspec( filespec ),
+        m_mime( headers_and_body.release() ) {
+}
+
+
+void fostlib::http::server::request::operator () (
     std::auto_ptr< boost::asio::ip::tcp::socket > socket
-) : m_cnx( new network_connection(socket) ) {
+) {
+    m_cnx.reset( new network_connection(socket) );
     utf8_string first_line;
     (*m_cnx) >> first_line;
     if ( !boost::spirit::parse(first_line.underlying().c_str(),
@@ -82,7 +115,7 @@ fostlib::http::server::request::request(
         ]
         >> boost::spirit::chlit< char >( ' ' )
         >> (
-            +boost::spirit::chset<>( "a-zA-Z0-9/.,:()%=-" )
+            +boost::spirit::chset<>( "_a-zA-Z0-9/.,:()%=-" )
         )[
             phoenix::var(m_pathspec) =
                 phoenix::construct_< url::filepath_string >( phoenix::arg1, phoenix::arg2 )
@@ -126,15 +159,10 @@ fostlib::http::server::request::request(
     } else
         m_mime.reset( new binary_body(headers) );
 }
-fostlib::http::server::request::request(
-    const string &method, const url::filepath_string &filespec,
-    std::auto_ptr< binary_body > headers_and_body
-) : m_method( method ), m_pathspec( filespec ),
-        m_mime( headers_and_body.release() ) {
-}
 
 
-boost::shared_ptr< fostlib::binary_body > fostlib::http::server::request::data() const {
+boost::shared_ptr< fostlib::binary_body > fostlib::http::server::request::data(
+) const {
     if ( !m_mime.get() )
         throw exceptions::null(
             "This server request has no MIME data, not even headers"
@@ -151,8 +179,8 @@ void fostlib::http::server::request::operator() (
             "This is a mock server request. It cannot send a response to any client"
         );
     std::stringstream buffer;
-    buffer << "HTTP/1.0 " << status.underlying()
-        << "\r\n" << response.headers() << "\r\n";
+    buffer << "HTTP/1.0 " << status.underlying() << "\r\n"
+        << response.headers() << "\r\n";
     (*m_cnx) << buffer;
     for ( mime::const_iterator i( response.begin() ); i != response.end(); ++i )
         (*m_cnx) << *i;
